# my-qt-crasher

./: .gitattributes  .gitignore  HowToMeson.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.ui  meson.build  myQtCrasher.pro  myQtCrasher.qrc  paths.cpp  paths.h  win-native.txt
Crashpad/: attachment.txt
Crashpad/Include/crashpad/handler/mac/: crash_report_exception_handler.h
Crashpad/Libraries/Windows/MD/: base.lib  client.lib  common.lib
Crashpad/Libraries/Windows/MDd/: base.lib  client.lib  common.lib
Crashpad/Licenses/: BREAKPAD.md
Crashpad/Tools/Linux/: sym_upload  symbols.sh  symupload
Crashpad/Tools/MacOS/: dump_syms  symbol-upload-macos  symbols.sh  symupload  update.sh
Crashpad/Tools/Windows/: symbols.bat  symbols.ps1
